GPencil: Array modifier relative offset don't respect restriction by layer #102992

Closed
opened 2022-12-07 13:06:05 +01:00 by hamza.SMA · 16 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash: b292cfe5a9
Worked: (newest version of Blender that worked as expected)

Short description of error
Array modifier have issue with relative offset don't respect restriction by layer also happens by material as we see in the video
2022-12-07 12-51-32.mp4

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash: `b292cfe5a9` Worked: (newest version of Blender that worked as expected) **Short description of error** Array modifier have issue with relative offset don't respect restriction by layer also happens by material as we see in the video [2022-12-07 12-51-32.mp4](https://archive.blender.org/developer/F14008301/2022-12-07_12-51-32.mp4) **Exact steps for others to reproduce the error**
Author

Added subscriber: @hamza-el-barmaki

Added subscriber: @hamza-el-barmaki

Added subscribers: @frogstomp-4, @antoniov

Added subscribers: @frogstomp-4, @antoniov

@frogstomp-4 do you want to try to fix this one? ;-)
I don't think is a complex fix. Let me know if you can't.

@frogstomp-4 do you want to try to fix this one? ;-) I don't think is a complex fix. Let me know if you can't.
Antonio Vazquez changed title from Array modifier have issue with relative offset don't respect restriction by layer to GPencil: Array modifier relative offset don't respect restriction by layer 2022-12-07 17:29:02 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

@antoniov i also found that same issue for material restriction happens

@antoniov i also found that same issue for material restriction happens

@hamza-el-barmaki It's expected...the problem is the bounding box calculation is not filtering the strokes.

@hamza-el-barmaki It's expected...the problem is the bounding box calculation is not filtering the strokes.

@antoniov I checked if this is easily solvable and saw this:

 
  if (BKE_gpencil_data_minmax(gpd, min, max)) {
    sub_v3_v3v3(size, max, min);
    /* Need a minimum size (for flat drawings). */
    CLAMP3_MIN(size, 0.01f);
  }

here size variable is updated with the bounding box which is calculated by looping through layers and strokes:

LISTBASE_FOREACH (bGPDlayer *, gpl, &gpd->layers) {
  bGPDframe *gpf = gpl->actframe;
  if (gpf != nullptr) {
    LISTBASE_FOREACH (bGPDstroke *, gps, &gpf->strokes) {
      changed |= BKE_gpencil_stroke_minmax(gps, false, r_min, r_max);
    }
  }
}

I am guessing that we could get the influence layer and material out of mmd->layername and so on...

but cannot access this in the BKE_gpencil_data_minmax, to which this parameter is not passed.

so what would be the correct approach, make another function to which this parameter can be passed?

@antoniov I checked if this is easily solvable and saw this: ``` if (BKE_gpencil_data_minmax(gpd, min, max)) { sub_v3_v3v3(size, max, min); /* Need a minimum size (for flat drawings). */ CLAMP3_MIN(size, 0.01f); } ``` here size variable is updated with the bounding box which is calculated by looping through layers and strokes: ``` LISTBASE_FOREACH (bGPDlayer *, gpl, &gpd->layers) { bGPDframe *gpf = gpl->actframe; ``` ``` if (gpf != nullptr) { LISTBASE_FOREACH (bGPDstroke *, gps, &gpf->strokes) { changed |= BKE_gpencil_stroke_minmax(gps, false, r_min, r_max); } } } ``` I am guessing that we could get the influence layer and material out of mmd->layername and so on... but cannot access this in the BKE_gpencil_data_minmax, to which this parameter is not passed. so what would be the correct approach, make another function to which this parameter can be passed?

@frogstomp-4 Just do a static function in the modifier itself doing the same of BKE_gpencil_data_minmax but doing the check of filters using is_stroke_affected_by_modifier

@frogstomp-4 Just do a static function in the modifier itself doing the same of `BKE_gpencil_data_minmax` but doing the check of filters using `is_stroke_affected_by_modifier`

relativeoffset.diff

@antoniov please find patch attached.
I am not sure about placement of the new function and it's naming. But it works

[relativeoffset.diff](https://archive.blender.org/developer/F14046241/relativeoffset.diff) @antoniov please find patch attached. I am not sure about placement of the new function and it's naming. But it works
Aleš Jelovčan was assigned by Antonio Vazquez 2022-12-09 16:00:06 +01:00

@frogstomp-4 Tested and works perfect. I have done some small tweaks to de code and I will commit setting you as Author.

@frogstomp-4 Tested and works perfect. I have done some small tweaks to de code and I will commit setting you as Author.

This issue was referenced by 746af98b00

This issue was referenced by 746af98b0022894ae352b2d9b3e8c356f80d92aa

This issue was referenced by c4251110a9

This issue was referenced by c4251110a973b5458ef7bf13ca88927ab1391ff9

This issue was referenced by fe30856d83

This issue was referenced by fe30856d83c7794ed42141b0baa9df15463b66fa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

will it be in 3.3 LTS ?

will it be in 3.3 LTS ?

@hamza-el-barmaki Yes, I just added the commit to #100749

@hamza-el-barmaki Yes, I just added the commit to #100749
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102992
No description provided.