Fix T102992: GPencil Array doesn't respect restriction in Offset

The problem was the bounding box was calculated using
all strokes, but if a filter is added, the bounding box must
include only selected strokes.

Fix by @frogstomp